--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter App</title>
-    <link rel="stylesheet" href="CounterApp.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>People Entered;</h1>
@@ -17,6 +17,6 @@
     <p>Total number of people who entered; </p>
     <h5 id="total-el">0</h5>
     <button type="button" id="refresh-btn" onclick="refresh()">REFRESH</button>
-    <script src="CounterApp.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
